@@ -1,3 +1,6 @@
+2471.	[bug]		named-checkzone was not reporting missing manditory
+			glue when sibling checks were disabled. [RT #18768]
+
 2469.	[port]		solaris: Work around Solaris's select() limitations.
 			[RT #18769]
 
